# vscode-ocp-cad-viewer

./: .bumpversion.cfg  .gitignore  .prettierrc  .vscodeignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO  app.py  b.stl  lego.py  main_standalone.py  measure.py  mkdocs.yml  ocp-cad-viewer-0.30.0.vsix  ocp_vscode_demo.py  package.json  proper-lockfile-4.1.2-esm.tgz  pyproject.toml  setup.cfg  setup.py  shai-hulud-report.csv  t.py  t6-long.py  test.ipynb  test.py  test.sh  three-cad-viewer-v2.0.16.tgz  tsconfig.json  warnings.txt
docs/: animation.md  api.md  best_practices.md  colormaps.md  commands.md  config_files.md  debug.md  enums.md  examples.md  image_face.md  install.md  ipython.md  measure.md  pbr_studio.md  ports.md  push_object.md  quickstart.md  run.md  selector.md  set_viewer_config.md  settings.md  show.md  show_all.md  show_object.md  snippets.md  standalone.md  troubleshooting.md
docs_new/: index.md
docs_new/assets/: styles.css
docs_new/concepts/: index.md
docs_new/guide/: index.md
docs_new/installation/: index.md
docs_new/reference/: index.md
docs_new/troubleshooting/: general.md  python.md  viewing.md
examples/: __convert_notebooks.py  b123d.py  b123d_selectors.py  box.py  colormaps.py  examples.py  hexapod.py  latest.py  logo.py  material-object.py  pbr-studio-demo.py  run_build123d_examples.py  selectors.py  set_viewer_config.py  shader-ball.py  show_object_usage.py  show_params.py  show_usage.py  toy-rider.py  ttt.py
examples/brass-deco/: brass_cube.gltf
includes/: glossary.md
media/: ocp-icon.afdesign  ocp-icon.pxm  ocp-logo.afdesign  ocp-vscode-icons.afdesign  svg-logo.py
ocp_vscode/: __init__.py  __main__.py  animation.py  backend.py  backend_logo.py  build123d.py  colors.py  comms.py  config.py  finder.py  interactive.py  measure.py  ocp_selectors.py  persistence.py  selectors.py  show.py  standalone.py  standalone_defaults.py  state.py  utils.py
ocp_vscode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ocp_vscode/standalone/: app.py  daemonize.py  handler.py
ocp_vscode/standalone/static/js/: comms.js  three-cad-viewer.esm.js
ocp_vscode/standalone/templates/: viewer.html
ocp_vscode/static/js/: comms.js  logo.js
ocp_vscode/templates/: viewer.html
pytest/: test_show.py
pytests/: test_serialisation.py  test_show.py
resources/: viewer.html  webview.html
src/: controller.ts  demo.ts  display.ts  examples.ts  extension.ts  libraryManager.ts  logo.ts  output.ts  state.ts  statusManager.ts  utils.ts  version.ts  viewer.ts
src/system/: shell.ts  terminal.ts
src/test/suite/: index.ts
static/: viewer.html  viewer_old.html
static/js/: main.js
templates/: index.html
test/: backend.py  sender.py  test_for_backend.py  testextension.py
tests/: test_measure.py  test_show.py  test_standalone_cli.py  test_viewer_config.py
