[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp_vscode"
version = "2.4.3"
authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
description = "OCP CAD Viewer for VSCode"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "3d models",
    "3d printing",
    "3d viewing",
    "3d",
    "brep",
    "cad",
    "cadquery",
    "opencscade",
    "python",
]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "ocp-tessellate>=3.0.0,<3.1.0",
    "requests",
    "ipykernel",
    "orjson",
    "websockets>=12.0",
]

[project.urls]
"Homepage" = "https://github.com/bernhard-42/vscode-ocp-cad-viewer"
"Bug Tracker" = "https://github.com/bernhard-42/vscode-ocp-cad-viewer/issues"

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 88
