[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp_vscode"
version = "3.0.0"
authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
description = "OCP CAD Viewer for VSCode"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "3d models",
    "3d printing",
    "3d viewing",
    "3d",
    "brep",
    "cad",
    "cadquery",
    "opencscade",
    "python",
]
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "ocp-tessellate>=3.1.0,<3.2.0",
    "requests",
    "ipykernel",
    "orjson",
    "websockets>=13.0,<14.0",
    "pyaml",
    "flask>=3.0,<4.0",
    "flask_sock>=0.7,<1.0",
    "click>=8.1,<9.0",
    "pyperclip==1.9.0",
    "questionary==2.1.1",
]

[project.urls]
"Homepage" = "https://github.com/bernhard-42/vscode-ocp-cad-viewer"
"Bug Tracker" = "https://github.com/bernhard-42/vscode-ocp-cad-viewer/issues"

[tool.setuptools]
packages = ["ocp_vscode"]
package-dir = { "" = "." }
include-package-data = false

[tool.setuptools.package-data]
ocp_vscode = ["templates/*.html", "static/css/*.css", "static/js/*.js"]

[project.optional-dependencies]
dev = ["questionary~=1.10.0", "bump-my-version", "ruff", "twine"]

[tool.ruff]
line-length = 88

# bump-my-version settings

[tool.bumpversion]
current_version = "3.0.0"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\d*)(?P<build>\\d*)"
serialize = ["{major}.{minor}.{patch}"]
allow_dirty = true
message = "Bump version: {current_version} → {new_version}"
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
sign_tags = false
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "ocp_vscode/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/version.ts"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = 'OCP CAD Viewer {current_version}'
replace = 'OCP CAD Viewer {new_version}'
